# penguin_site

./: .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile_joe  docker-compose.yml  rust-toolchain.toml
locales/en/: main.ftl
locales/fr/: main.ftl
migrations/: 1_init_up.sql  20240527000000_init.sql
src/: lib.rs  main.rs  server.rs
src/app/: app.rs  assembly.rs  contact.rs  home.rs  i18n_provider.rs  mod.rs  training.rs  tune_ups.rs
src/server/: database.rs  mod.rs
style/: tailwind.css
