[package]
name = "techno_penguin"
version = "0.1.0"
edition = "2021"
authors = ["Mike Wallace <penguin@nopez.addy.io>"]
description = "Pengui"
homepage = "https://www.pingouin-techno.com"
repository = "https://github.com/MikeWallaceDev/alloresume"
license = "MIT"
# keywords = ["cv", "resume"]
# categories = ["productivity", "work"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos and frontend
leptos = { version = "0.8", features = ["nightly"] }
leptos_router = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
# singlestage = { version = "0.4", features = ["nightly"] }

# Internet
wasm-bindgen = { version = "=0.2.105", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = [
   "fs",
   "trace",
   "cors",
], optional = true }
axum = { version = "0.8", optional = true }
http = "1"

# i18n
leptos-fluent = "0.3"

# Debug
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
   "fmt",
   "env-filter",
], optional = true }
tracing-wasm = { version = "0.2", optional = true }

# Tools
tokio = { version = "1", features = [
   "full",
   "rt-multi-thread",
], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
futures = "0.3"

# Database
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.9", features = [
   "sqlite",
   "macros",
   "runtime-tokio",
], optional = true }

[features]
hydrate = [
   "leptos/hydrate",
   "dep:console_error_panic_hook",
   "dep:wasm-bindgen",
   "dep:tracing-wasm",
]

ssr = [
   "dep:axum",
   "dep:tokio",
   "dep:tower",
   "dep:tower-http",
   "dep:leptos_axum",
   "dep:sqlx",
   "dep:tracing-subscriber",
   "leptos/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr",
   "leptos-fluent/ssr",
   "leptos-fluent/axum",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos to generate the JS file for the app
output-name = "techno_penguin"

# The site root folder is where cargo-leptos generate all output. 
# WARNING all content of this folder will be erased on a rebuild.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to "pkg"
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS file will be put in the site-root/site-pkg-dir folder
style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"
# tailwind-config-file = "tailwind.config.js"

# [Optional] Assets source dir. All files under this directory will be copied to the site-root directory
assets-dir = "public"

# The IP and port (eg: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   cmd = "npx playwright test"
#   browser = "chromium"
# [Optional] The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# Set these to false to disable some optimization features.
# watch = false

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-default-features = false

watch-additional-files = ["locales"]
